(library 
 (name concseplog)
 (public_name cyclist.concseplog)
 (libraries lib generic mparser.pcre)
 (modules
   (:standard 
      \ slinit
        disprove
        modelcheck
        prove
        satcheck
        satexpgen)))

(executables
 (names
   prove disprove modelcheck satcheck satexpgen)
 (public_names
   sl_prove sl_disprove sl_modelcheck sl_satcheck sl_satexpgen)
 (modules
   prove disprove modelcheck satcheck satexpgen)
 (libraries lib generic concseplog))

(toplevel
 (name sltop)
 (libraries lib generic concseplog))

; (executable
;  (name        sltop)
;  (public_name sl.top)
;  (libraries  compiler-libs.toplevel lib generic seplog)
;  (modules sltop)
;  (link_flags (-linkall))
; (modes      byte))