(library 
 (name seplog)
 (public_name cyclist.seplog)
 (libraries lib generic mparser mparser.pcre zarith ounit2)
 (modules
   (:standard 
      \ slinit
        disprove
        modelcheck
        prove
        satcheck
        satexpgen
        pheap_test)))

(executables
 (names
   prove disprove modelcheck satcheck satexpgen)
 (public_names
   sl_prove sl_disprove sl_modelcheck sl_satcheck sl_satexpgen)
 (modules
   prove disprove modelcheck satcheck satexpgen)
   (libraries lib generic seplog))

(toplevel
 (name sltop)
 (libraries lib generic seplog zarith))
 

;(executable
; (name pheap_test) 
; (modules pheap_test)
; (libraries oUnit lib generic seplog zarith))

(tests
 (names pheap_test)
 (modules pheap_test)
 (libraries oUnit lib generic seplog zarith)) 

; (executable
;  (name        sltop)
;  (public_name sl.top)
;  (libraries  compiler-libs.toplevel lib generic seplog)
;  (modules sltop)
;  (link_flags (-linkall))
; (modes      byte))